2004-07-09 12:25 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridloadglobalnodedata_,gridsetlocalnodedata_)
	fixed a potential memory write past bounds for the the last node
	in the passing array having face but no edge connectivity.

2004-07-08 15:25 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelsmooth_) exposed optimizationLimit 
	and laplacianLimit.
	* src/gridmpi.c (gridParallelSmooth) exposed optimizationLimit 
	and laplacianLimit.

2004-07-06 17:25 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) changed the global node
	id's calcualtion for face patches to use CADTopo_VolFacePts
	instead of UGPatch_GlobalIndex. This is the correct numbering if
	UGPatch_InitSurfacePatches is NOT called.
	
2004-07-06 13:25 Mike Park  <mike.park@nasa.gov>

	* src/restartTest.c Test program for GeoSDK restarts.

2004-07-06 11:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) added function to
	test CAD Parameters and projection XYS's.

2004-07-01 11:25 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomExtras.c added mock UG_REFINE. 
	fixed UGPatch_Parent to allocate ugrid. 
	made GeoMesh_UseDefaultIOCallbacks a function.
	renamed GeoMesh_SavePart to CADGeom_SavePart.
	
2004-07-01 10:40 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridCreateShellFromFaces) added to call 
	CADTopo_AssembleTShell to create shell of volume ugrid.
	* src/gridfortran.c (gridcreateshellfromfaces_) gridCreateShellFromFaces
	* src/FAKEGeomExtras.c added mock CADGeom_UpdateFaceGrid 
	UGPatch_Parent CADTopo_ShellStats CADTopo_AssembleTShell.

2004-06-30 11:23 Mike Park  <mike.park@nasa.gov>

	* src/gridgeom.c (gridParallelGeomLoad) called MeshMgr_Initialize.
	This call should be removed after Bill Jones and I remove the
	need to activate the background source functions.
	* src/FAKEGeomExtras.c added mock MeshMgr_Initialize UG_UNKNOWN.
	removed unneeded UGrid_BuildConnectivity.
