@@ -22,7 +22,7 @@ class RubyExtensionBuilder
   requiredPackages['GridMetric'] = %w{ Adj Line Grid GridMath }
   requiredPackages['GridSwap'] = %w{ Adj Line Grid GridMath GridMetric }
   requiredPackages['GridCAD'] = %w{ Adj Line Grid GridMath GridMetric }
-  requiredPackages['GridInsert'] = %w{ Adj Line Grid GridMetric GridSwap GridCAD }
+  requiredPackages['GridInsert'] = %w{ Adj Line Grid GridMath GridMetric GridSwap GridCAD }
   requiredPackages['GridMPI'] = %w{ Adj Line Sort Queue Grid GridMath GridMetric GridInsert GridSwap }
   requiredPackages['GridMove'] = %w{ Adj Line Grid GridMath GridMetric }
   requiredPackages['Layer'] = %w{ Adj Near Intersect Line Grid GridMath GridMetric GridCAD GridInsert }
