@@ -55,6 +55,7 @@ Grid *gridStoreARDerivative(Grid *g, int node );
 double gridMinVolume(Grid *g);
 GridBool gridNegCellAroundNode(Grid *g, int node );
 GridBool gridNegCellAroundNodeExceptGem(Grid *g, int node );
+double gridMinARAroundNodeExceptGem(Grid *g, int node );
 double gridMinAR(Grid *g);
 double gridMinThawedAR(Grid *g);
 
